Merged in feature/CAP-730-separate-libs (pull request #574)
CAP-730 - Fixing Permissions

* Merge branch 'master' into feature/CAP-730-separate-libs

* Fixing some tests

* Fixed more tests

* Fixed more tests

* Reverted gradle files

* Added back in annotations

* Fixed final missing permission

* Merge branch 'master' into feature/CAP-730-separate-libs

* Merge branch 'master' into feature/CAP-730-separate-libs

* Merged master into feature/CAP-730-separate-libs

Approved-by: jim.scarborough